# LabPulse

./: .gitignore  README.md  Start-LabPulse.ps1  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  start-labpulse.command  supabase-schema.sql  tsconfig.json  vite.config.ts
client/: index.html  nginx.conf  package.json
client/src/: App.tsx  index.css
client/src/components/: AlertBadge.tsx  Layout.tsx
client/src/pages/: DashboardPage.tsx  LabDetailPage.tsx  LabsManagementPage.tsx  LoginPage.tsx
client/src/services/: api.ts
client/src/stores/: authStore.ts
server/: .env.example  Dockerfile  package.json
server/prisma/: schema.prisma  seed.ts
server/src/: index.ts
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: commands.rs  db.rs  imports.rs  main.rs
src/components/: DashboardFilters.tsx  DashboardSummary.tsx  ErrorBoundary.tsx  FinancialEntryForm.tsx  MonthOfficeSelector.tsx  NotesSection.tsx  OfficeCard.tsx  OperationsEntryForm.tsx  VolumeEntryForm.tsx
src/lib/: analytics.ts  bus.ts  csv.ts  derive.ts  export.ts  fs-helpers.ts  ids.ts  period.ts  runtime.ts  series.ts  settings.ts  validate.ts  xlsx.ts
src/models/: index.ts  monthlyMetrics.ts  office.ts  staff.ts
src/pages/: Compliance.tsx  DataEntry.tsx  Directory.tsx  OfficeDetail.tsx  Overview.tsx  Rankings.tsx  Settings.tsx  dev-storage-test.tsx
src/storage/: Storage.ts  index.ts  local-json.ts  seeds.ts  supabase.ts
src/styles/: tables.css
src/types/: Dashboard.ts  DataEntry.ts
(+27 files in other folders)
