[package]
name = "labpulse"
version = "0.1.0"
description = "LabPulse – Operations Intelligence Dashboard"
authors = ["Magnivoxs"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

